c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/invalid_union_lvalues/address_of_non_lvalue_union_member.c
union u {
    int arr[3];
    double d;
};

union u get_union(void) {
    union u result = {{1, 2, 3}, 4.0};
    return result;
}

int main(void) {
    // invalid - can't get address of get_union().arr b/c it's not an lvalue
    // even though it has temporary lifetime
    int *ptr[3] = &get_union().arr;
    return 0;
}